# qanot

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_UZ.md  SECURITY.md  config.example.json  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml  (+2 more)
docs/: GUIDE.md  api-reference.md  architecture.md  configuration.md  getting-started.md  index.md  memory.md  plugins.md  providers.md  rag.md  scheduler.md  telegram.md  tools.md
qanot/: __init__.py  __main__.py  agent.py  agent_bot.py  audio.py  backup.py  circuit.py  compaction.py  config.py  context.py  conversation.py  cost.py  daemon.py  dashboard.py  dashboard_html.py  export_html.py  extraction.py  flush.py  fs_safe.py  hooks.py  links.py  main.py  mcp_client.py  memory.py  messages.py  prompt.py  ratelimit.py  registry.py  restart.py  routing.py  scheduler.py  secrets.py  session.py  skills.py  telegram.py  telemetry.py  userbot_client.py  utils.py  vad.py  voice.py  (+4 more)
scripts/: agent_eval.py  autoresearch.py  bench_memory.py  deploy.sh  recreate_containers.py
tests/: test_absmarket_query_spool.py  test_absvision_dates.py  test_agent.py  test_agent_bot.py  test_agent_manager.py  test_anthropic_overflow.py  test_audio_rt.py  test_clipper.py  test_command_safety.py  test_command_safety_hardening.py  test_config.py  test_config_secret.py  test_context.py  test_cost_budget.py  test_cost_tracking.py  test_dashboard_auth.py  test_delegate.py  test_doctor.py  test_document_templates.py  test_exec_security.py  test_export_html.py  test_extraction.py  test_failover.py  test_followup.py  test_fs_safe.py  test_group_orchestration.py  test_image.py  test_mcp_install.py  test_new_features.py  test_orchestrator.py  test_orchestrator_registry_race.py  test_plugin_registry.py  test_plugin_security.py  test_plugins_system.py  test_rag.py  test_ratelimit.py  test_restart.py  test_routing.py  test_scheduler.py  test_secrets.py  (+16 more)
(+285 files in other folders)
