[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qanot"
version = "2.0.2"
description = "The AI agent that flies on its own. Two commands to fly."
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "Sirli AI", email = "hello@sirli.ai"},
]
keywords = ["telegram", "bot", "ai", "agent", "chatbot", "llm", "rag", "uzbekistan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "aiogram>=3.4",
    "anthropic>=0.40",
    "openai>=1.50",
    "aiohttp>=3.9",
    "apscheduler>=3.10",
    "cryptography>=42.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
docs = ["python-docx>=1.1", "openpyxl>=3.1", "fpdf2>=2.7", "python-pptx>=0.6"]
rag = ["sqlite-vec>=0.1.6", "PyMuPDF>=1.24"]
local = ["fastembed>=0.4"]
mysql = ["aiomysql>=0.2"]
mcp = ["mcp>=1.0"]
browser = ["playwright>=1.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=1.0"]

[project.urls]
Homepage = "https://github.com/QANOT/qanot"
Documentation = "https://plane.topkey.uz/docs/"
Repository = "https://github.com/QANOT/qanot.git"
"Bug Tracker" = "https://github.com/QANOT/qanot/issues"
Changelog = "https://github.com/QANOT/qanot/releases"

[project.scripts]
qanot = "qanot.cli:main"

[tool.setuptools.packages.find]
include = ["qanot*", "plugins*"]

[tool.setuptools.package-data]
qanot = ["templates/**/*", "py.typed"]
plugins = ["**/*.py", "**/*.md", "**/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
